# Neuroflow

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  Neuroflow.sln  Neuroflow2.sln  README.md
CMake/: FindOpenCL.cmake
Dlang/: Dlang.mdw  Dlang.userprefs
KernelPlans/: RTLR.cpp  RTLR_CPU.cpp  RTLR_GPU.cpp
Linqlike/: Linqlike.vcxproj  Linqlike.vcxproj.filters  linqlike.h  linqlike_any.h  linqlike_base.h  linqlike_cast.h  linqlike_concat.h  linqlike_cross_join.h  linqlike_distinct.h  linqlike_first.h  linqlike_from.h  linqlike_group_by.h  linqlike_of_type.h  linqlike_order_by.h  linqlike_row_num.h  linqlike_select.h  linqlike_select_many.h  linqlike_sort.h  linqlike_to_map.h  linqlike_where.h
LinqlikeUT/: LinqlikeUT.vcxproj  LinqlikeUT.vcxproj.filters  linqlike_tests.cpp  stdafx.cpp  stdafx.h
Neuroflow/: Args.cs  CollectionsUtil.cs  ComputationContext.cs  ComputationStateBag.cs  Device.cs  DeviceArrayEx.cs  DeviceArrayFactory.cs  DeviceArrayType.cs  DisposableObject.cs  GCHandleRef.cs  IComputationStateFactory.cs  IDeviceArray.cs  IDeviceArray2.cs  IDeviceArrayManagement.cs  IDeviceArrayPool.cs  IndexedResourceBag.cs  (+16 more)
Neuroflow.Native/: AssemblyInfo.cpp  Callbacks.h  MUtil.cpp  MUtil.h  NativeComputeActivation.cpp  NativeComputeActivation.h  NativeDataArray.cpp  NativeDataArray.h  NativeDataArrayFactory.cpp  NativeDataArrayFactory.h  NativeDeviceArray.h  NativeDeviceArray2.h  NativeDeviceArrayManagement.cpp  NativeDeviceArrayManagement.h  NativeException.h  NativeLearningAlgo.cpp  NativeLearningAlgo.h  NativeLearningAlgoFactory.cpp  NativeLearningAlgoFactory.h  NativeList.h  NativeMultilayerPerceptronAdapter.cpp  NativeMultilayerPerceptronAdapter.h  NativeObject.h  NativePtr.h  NativeTypedefs.h  NativeVectorUtils.cpp  NativeVectorUtils.h  Neuroflow.Native.vcxproj  Neuroflow.Native.vcxproj.filters  OCLContext.cpp  OCLContext.h  ReadMe.txt  Stdafx.cpp  Stdafx.h
Neuroflow.UT/: ContextTests.cs  DataArrayFactoryTests.cs  MultilayerPerceptronFFTests.cs  MultilayerPerceptronRecurrentTests.cs  NNTestHelpers.cs  Neuroflow.UT.csproj  TestCategories.cs  VectorUtilsTests.cs
neuroflow_core_tests/: CMakeLists.txt  computation_context_tests.cpp  data_array_tests.cpp  main.cpp  multilayer_perceptron_tests.cpp  stdafx.h  utils_tests.cpp
(+3304 files in other folders)
